# slide24

./: .gitignore  Cargo.toml  README.md
src/: .main.rs.un~  .puzzle.rs.swp  .puzzle.rs.un~  main.rs  main.rs~  puzzle.rs  puzzle.rs~
www/: index.html  slide24.wasm
