[package]
name = "slide24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
getrandom = {version = "0.2.12", features = ["js"]}
iterator-sorted = "0.2.0"
macroquad = "0.4.5"
rand = "0.8.5"
